# termy

./: .gitignore  .gitmodules  .prettierrc  CHANGELOG.md  LICENSE  binding.gyp  contributing.md  index.html  jest.config.js  lerna.json  package-lock.json  package.json  readme.md  snowpack.config.js  tsconfig.electron.json  tsconfig.json  types.ts  webpack.config.js  webpack.config.ts
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflow/: electron.yml
.github/workflows/: electron.yml
app/: package-lock.json  package.json  snowpack.config.js  tsconfig.json  vite.config.js
app/public/: index.html
app/src/: app.test.tsx  app.tsx  base-theme.ts  index.css  index.tsx  main.tsx  stitches.config.ts  store.ts  svg.tsx
app/src/components/: api.tsx  button.tsx  card.tsx  cell.tsx  container.tsx  cursor.tsx  flex.tsx  grid.tsx  header.tsx  index.ts  input.tsx  link.tsx  mdx.tsx  path.tsx  prompt.tsx  span.tsx  suggestions.tsx  svg.tsx  tab.tsx  table.tsx  terminal.tsx  text.tsx  tissue.tsx
app/src/css/: index.css  inter.css  source-code-pro.css
app/src/hooks/: index.ts  use-debounce.ts  use-global-shortcuts.ts  use-listener.ts  use-mousetrap.ts  use-window-info.ts  use-xterm.ts
app/src/lib/: index.ts  listener.ts  typed-cli.ts  xterm.ts
app/src/store/: helpers.ts  index.ts  reducer.ts  state.ts
app/types/: index.d.ts  shared.d.ts
electron/: app-manager.ts  communication.ts  main.ts  messages.ts  package.json  readme.md  shared.d.ts  tray-menu.ts  tsconfig.json  types.ts  webpack.config.js  window.ts
electron/native/: .gitignore  Cargo.toml  index.d.ts  package.json
electron/native/.test/: readme.md
electron/native/src/: autocomplete.rs  cell.rs  db.rs  lib.rs  logger.rs  shell.rs
electron/native/src/cell/: mod.rs
electron/native/src/command/: external.rs  mod.rs  path.rs
electron/native/src/command/internal/: mod.rs  shortcuts.rs  theme.rs  view.rs
electron/native/src/commands/: mod.rs  view.rs
electron/native/src/util/: mod.rs  paths.rs
electron/src/: autoupdater.ts  config.ts  ipc.ts  main.ts  messages.ts  position.ts  preload.js  utils.ts  window.ts
native/: .gitignore  Cargo.toml  index.d.ts  index.js
native/lib/: index.d.ts  index.js
native/src/: autocomplete.rs  cmd.rs  command.rs  db.rs  lib.rs  logger.rs  main.rs  paths.rs  shell.rs  suggestions.rs  util.rs
native/src/cell/: command.rs  external.rs  mod.rs
native/src/cell/internal/: cd.rs  current_dir.rs  edit.rs  home.rs  mod.rs  pretty_path.rs  shortcuts.rs  theme.rs  view.rs
native/src/command/: external.rs  internal.rs  mod.rs  path.rs
native/src/command/internal/: edit.rs  home.rs  mod.rs  theme.rs  view.rs
native/src/suggestions/: executables.rs  external.rs  history.rs  mod.rs  paths.rs
native/src/util/: cross_path.rs  dirs.rs  error.rs  executables.rs  mod.rs  parser.rs  paths.rs
native/test/: history
public/: electron.js  index.html
scripts/: build.sh  clean.sh
src/: app.test.tsx  app.tsx  base-theme.ts  index.css  index.tsx  interfaces.ts  readme.md  reset.css  stitches.config.ts  store.ts  xterm.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  shell.rs
src/components/: cell.tsx  header.tsx  input.tsx  key.tsx  prompt.tsx  svg.tsx  terminal.tsx
src/lib/: get-command-type.tsx  index.ts  ipc.ts  listener.ts  plugins.ts  tauri.ts  xterm.ts
types/: index.ts
web/: base-theme.ts  next.config.js  package.json  readme.md  shortcuts.ts  stitches.config.ts
web/components/: api.tsx  edit.tsx  feature.tsx  footer.tsx  layout.tsx  nav.tsx  prompt.tsx  pty.tsx
web/lib/: features.ts
web/pages/: _app.tsx  _document.tsx  community.tsx  docs.tsx  index.tsx  pioneer-faq.tsx
(+70 files in other folders)
