[package]
name = "native"
version = "0.1.0"
authors = ["martonlanga <martonlanga@gmail.com>"]
license = "MIT"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0.32"
fuzzy-matcher = "*"
crossbeam-channel = "0.4.4"
napi = { git = "https://github.com/napi-rs/napi-rs" }
napi-derive = { git = "https://github.com/napi-rs/napi-rs" }
portable-pty = "0.3.1"
rusqlite = "0.24.1"

[build-dependencies]
napi-build = "0.2"
