[package]
name = "native"
version = "0.2.0"
authors = ["martonlanga <martonlanga@gmail.com>"]
license = "MIT"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0.32"
fuzzy-matcher = "*"
crossbeam-channel = "0.4.4"
napi = { git = "https://github.com/napi-rs/napi-rs", features = ["serde-json", "napi4"] }
napi-derive = { git = "https://github.com/napi-rs/napi-rs" }
portable-pty = "0.3.1"
rusqlite = { version = "0.24.1", features = ["bundled"] }
dirs = "3.0.1"
relative-path = "1.3.2"
log = "0.4"
log4rs = "0.13.0"
indoc = "1.0.3"
lazy_static = "1.4.0"

[build-dependencies]
napi-build = { git = "https://github.com/napi-rs/napi-rs" }
