[package]
name = "termy"
version = "0.1.0"
description = "A Tauri App"
authors = [ "you" ]
license = ""
repository = ""
default-run = "termy"
edition = "2018"
build = "src/build.rs"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
tauri = { version = "0.9", features = [ "all-api" ] }
subprocess = "0.2.4"
anyhow = "1.0.32"
regex = "1.3.9"
base64 = "0.12.3"
fuzzy-matcher = "*"
crossbeam-channel = "0.4.4"
crossbeam-utils = "0.7.2"

[target."cfg(windows)".build-dependencies]
winres = "0.1"

[features]
embedded-server = [ "tauri/embedded-server" ]
no-server = [ "tauri/no-server" ]

[[bin]]
name = "termy"
path = "src/main.rs"
